Version 1.4.6
------------------------------------------------------------
6 June 2008
+ restrictView added to loadChildren.

3 June 2008
+ Update to addSortHeaders.
+ Adding missing paging navigation.
+ Updated: templates/admin/menu_list.tpl

Version 1.4.5
------------------------------------------------------------
1 April 2008
+ Work done on submenus appearing.

Version 1.4.4
----------------------------------------------------------------
19 March 2008
+ Trying to get non-keyed menu items highlighted properly.

11 December 2007
+ Added three new menu functions:
  o quickLink - inserts a new link on any menu pinned on all pages;
                passed a title and url.
  o quickKeyLink - same as above but passed key_id
  o updateKeyLink - causes a link to reset its url, title, and active
                    status based on the condition of the current key
                    it is based on. 

Version 1.4.3
----------------------------------------------------------------
28 November 2007
+ Removed redundancy.

27 November 2007
+ Menu character limit set in settings now.

1 November 2007
+ Added enableAdminMode function to menu. Called statically.

18 October 2007
+ Bug #1814628 : Menu will only add a home link on new menus, not
  updated ones. 
  
10 October 2007
+ All links without parents were opening when on the home page.
  Changed code to prevent it.

Version 1.4.2
----------------------------------------------------------------
29 September 2007
+ Added option to menu list to reindex link order
+ Deleting a link didn't fix link order

27 September 2007
+ Increased popup height.

19 September 2007
+ Added option for the admin mode link to be in miniadmin instead of
  under the menu.
+ Added option to automatically add a Home link to a new menu.
+ Added loadClass functions
+ Updated: templates/admin/settings.tpl

Version 1.4.1
----------------------------------------------------------------
18 September 2007
+ Error check added to Menu_Item.php