@@ -1,3 +1,6 @@
+19 June 2008
++ Changed admin link wording.
+
 Version 1.4.6
 ------------------------------------------------------------
 6 June 2008
